tests/baselines/reference/FunctionDeclaration6_es6.errors.txt
tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration6_es6.ts(1,9): error TS1220: Generators are only available when targeting ECMAScript 6 or higher.
tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration6_es6.ts(1,18): error TS2523: 'yield' expressions cannot be used in a parameter initializer.


==== tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration6_es6.ts (2 errors) ====
    function*foo(a = yield) {
            ~
!!! error TS1220: Generators are only available when targeting ECMAScript 6 or higher.
                     ~~~~~
!!! error TS2523: 'yield' expressions cannot be used in a parameter initializer.
    }